--- a/src/app/components/article/article.component.html
+++ b/src/app/components/article/article.component.html
@@ -1,16 +1,21 @@
 <ion-card>
   <ion-card-subtitle class="ion-margin">
     <ion-row class="ion-align-items-center">
-      <ion-col class="ion-margin">
+      <ion-col class="ion-margin" (click)="openArticle()">
         <span class="text-primary">{{index+1}}. </span>
         <span class="article-source-same">{{article.source.name}}</span>
+      </ion-col>
+      <ion-col align="right">
+        <ion-button (click)="openMenu()" fill="clear">
+          <ion-icon slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-card-subtitle>
   <ion-card-title class="ion-padding-horizontal ion-margin-bottom">
     {{article.title}}
   </ion-card-title>
-  <ion-img [src]="article.urlToImage"></ion-img>
+  <ion-img [src]="article.urlToImage" (click)="openArticle()"></ion-img>
   <ion-card-content>
     <p>{{article.description}}</p>
   </ion-card-content>
